correct text alignment

--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,10 @@ img {
   width: 100%;
 }
 
+body {
+  text-align: center;
+}
+
 body img:nth-child(even) {
   display: none;
 }
@@ -42,7 +46,7 @@ body img:nth-child(even) {
 
   img {
     display: inline-block;
-    width: 30%;
+    width: 32%;
   }
 
   body img:first-child {
@@ -54,12 +58,11 @@ body img:nth-child(even) {
 @media only screen and (min-width: 60em) {
 
   img {
-    width: 20%;
+    width: 24%;
   }
 
   body img:first-child {
     display: inline-block;
-    margin-left: 3rem;
   }
 
 }
